feat: add search completion webhooks
